[package]
name = "universal_wallet"
version = "0.2.2"
authors = ["Charles Cunningham <c.a.cunningham6@gmail.com>"]
edition = "2018"
description = "Rust implementation of the Universal Wallet 2020 Specification"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rand_core = "0.5.1"
generic-array = "0.14.4"
# Serialize/Deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Signing crates
#secp256k1 = { version = "0.19.0", features = ["recovery", "ecdsa", "sha256"]}
ecdsa = { version = "0.8.5", features = ["zeroize"] }
k256 = { version = "0.5.9", features = ["ecdsa", "sha256", "keccak256"]}
ed25519-dalek = "1.0.1"
# Encryption crates
aead = "0.3.2"
crypto_box = "0.4.0"
### for x86/x86_64 CPUs use flags: RUSTFLAGS="-Ctarget-feature=+avx2"
### idealy use haswell or skylake as baseline: RUSTFLAGS="-Ctarget-cpu=haswell -Ctarget-feature=+avx2"
x25519-dalek = "1.1.0"
xsalsa20poly1305 = "0.5.0"
chacha20poly1305 = "0.6.0"
# To be removed
#ursa = "0.3.5"
# Hashing crates
uuid = { version = "0.8", features = ["v4"] }
sha3 = "0.9.1"
blake2 = "0.9.0"
# Encode/Decode
hex = { version = "0.4.2", features = ["serde"]}
base64 = "0.12"
bs58 = "0.3"
