[package]
name = "universal_wallet"
version = "0.3.3"
authors = ["Charles Cunningham <c.a.cunningham6@gmail.com>",
            "Ivan Temchenko <35359595i@gmail.com>"]
edition = "2018"
description = "Rust implementation of the Universal Wallet 2020 Specification"
license = "Apache-2.0"
homepage = "https://jolocom.com/"
documentation = "https://docs.rs/universal_wallet"
repository = "https://github.com/jolocom/wallet-rs"
readme = "README.md"
keywords = ["keri", "SSI", "jolocom", "did", "wallet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
didcomm_rs = { git = "https://github.com/jolocom/didcomm-rs", branch = "main", optional = true }
thiserror = "1.0"
rand_core = "0.5.1"
arrayref = "0.3.6"
generic-array = "0.14.4"
# Serialize/Deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Signing crates
k256 = { version = "0.6", features = ["ecdsa", "ecdsa-core", "sha256", "keccak256", "zeroize"]}
ed25519-dalek = "1.0.1"
# Encryption crates
aead = "0.3.2"
crypto_box = "0.5.0"
### for x86/x86_64 CPUs use flags: RUSTFLAGS="-Ctarget-feature=+avx2"
### idealy use haswell or skylake as baseline: RUSTFLAGS="-Ctarget-cpu=haswell -Ctarget-feature=+avx2"
x25519-dalek = "1.1.0"
chacha20poly1305 = "0.7.0"
# Hashing crates
uuid = { version = "0.8", features = ["v4"] }
sha3 = "0.9.1"
blake2 = "0.9.0"
# Encode/Decode
hex = { version = "0.4.2", features = ["serde"]}
base64 = "0.13"
bs58 = "0.4"

[dev-dependencies]
hex = "0.4.2"

[features]
default = [ "didcomm" ]
didcomm = [ "didcomm_rs" ]

